# gtk-vala-app

./: Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  com.example.Gtk.ValaApplication.appdata.xml.in  com.example.Gtk.ValaApplication.data.gresource.xml  com.example.Gtk.ValaApplication.gschema.xml  main.ui
src/: Makefile.am  config.vapi  main.vala  window.vala
